@@ -2,7 +2,7 @@
 .\"
 .\" Copyright (C) 2003 Chris Rivera
 .\" Licensed under the terms of the GNU Library General Public License, v2
-.TH SLABTOP "1" "June 2011" "procps-ng" "User Commands"
+.TH SLABTOP "1" "2021-03-11" "procps-ng" "User Commands"
 .SH NAME
 slabtop \- display kernel slab cache information in real time
 .SH SYNOPSIS
@@ -25,7 +25,8 @@ Refresh the display every
 in seconds.  By default,
 .B slabtop
 refreshes the display every three seconds.  To exit the program, hit
-.BR q.
+.BR q .
+This cannot be combined with the \fB-o\fR option.
 .TP
 \fB\-s\fR, \fB\-\-sort\fR=\fIS\fR
 Sort by \fIS\fR, where \fIS\fR is one of the sort criteria.
