@@ -31,6 +31,7 @@ DEJATOOL += \
 	pkill \
 	ps \
 	pwdx \
+	slabtop \
 	uptime \
 	vmstat \
 	w
@@ -51,6 +52,7 @@ EXTRA_DIST = \
     ps.test/ps_personality.exp \
     ps.test/ps_sched_batch.exp \
     pwdx.test/pwdx.exp \
+    slabtop.test/slabtop.exp \
     uptime.test/uptime.exp \
     vmstat.test/vmstat.exp \
     w.test/w.exp
