@@ -7,14 +7,19 @@ set avst "Active / Total"
 set used "\\\(% used\\\)\\s+:"
 set pct "\\\(\\d+\\.\\d+%\\\)"
 
-if { [ file readable "/proc/slabinfo" ] == 0 } {
-    unsupported "slabtop tests disabled as /proc/slabinfo is unreadable"
-} else {
 set slabtop_header "^ $avst Objects $used \\d+ / \\d+ ${pct}\\s+$avst Slabs $used \\d+ / \\d+ ${pct}\\s+$avst Caches $used \\d+ / \\d+ ${pct}\\s+$avst Size $used \\d+\\.\\d+K / \\d+\\.\\d+K ${pct}\\s+Minimum / Average / Maximum Object : \\d+\\.\\d+K / \\d+\\.\\d+K / \\d+\\.\\d+K\\s+OBJS ACTIVE  USE OBJ SIZE  SLABS OBJ/SLAB CACHE SIZE NAME\\s+"
 
 set test "slabtop help"
 spawn $slabtop --help
 expect_pass $test "^\\s+Usage:\\s+\(lt-\)\?slabtop \\\[options\\\]"
+
+set test "slabtop o then d options"
+spawn $slabtop -o -d 10
+expect_pass $test "Cannot combine -d and -o options"
+
+set test "slabtop d then o options"
+spawn $slabtop -d 10 -o
+expect_pass $test "Cannot combine -d and -o options"
 
 set sort_tests {
     "a" "active objects" "^\\s*\\d+\\s+(\\d+)\\s+\\d+%\\s+\\d+\\.\\d+K\\s+\\d+\\s+\\d+\\s+\\d+K\\s+\\S\[^\r\]+\\s*"
@@ -25,9 +30,16 @@ set sort_tests {
     "s" "object size" "^\\s*\\d+\\s+\\d+\\s+\\d+%\\s+(\\d+\\.\\d+)K\\s+\\d+\\s+\\d+\\s+\\d+K\\s+\\S\[^\r\]+\\s*" 
     "u" "utilisation" "^\\s*\\d+\\s+\\d+\\s+(\\d+)%\\s+\\d+\\.\\d+K\\s+\\d+\\s+\\d+\\s+\\d+K\\s+\\S\[^\r\]+\\s*" 
  }
+
+# BEGIN - Tests requiring /proc/slabinfo
+if { [ file readable "/proc/slabinfo" ] == 0 } {
+    unsupported "slabtop tests disabled as /proc/slabinfo is unreadable"
+} else {
+
 foreach { flag desc match } $sort_tests {
     set test "slabtop sorted by $desc"
     spawn $slabtop -o -s $flag
     expect_table_dsc $test $slabtop_header $match
 }
 }
+# END - Tests requiring /proc/slabinfo
